bugzilla 333046 : follow Findbugs advice for Constructor, concatenates String in loop using + and some other